# brushface

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yaml
brushface/: __init__.py  _brushface.py
brushface/_modules/: analysis.py  detection.py  preprocessing.py  recognition.py  representation.py  type.py  verification.py
brushface/algorithm/: __init__.py  distance.py  l2.py  list.py  normalization.py
brushface/algorithm/_algorithm/: distance.py  list.py  normalization.py
brushface/data/: detected_face.py  face_area.py  recognition.py  representation.py  verification_result.py
brushface/error/: optional_dependency_not_found_error.py
brushface/internal/: __init__.py  _logger.py  constant.py  env.py  file.py  hash.py  logger.py  model.py
brushface/models/: __init__.py  apparent_age.py  arc_face.py  deep_id.py  dlib.py  emotion.py  facenet.py  fast_mtcnn.py  gender.py  race.py  vgg_face.py  yolo.py
brushface/models/_models/: __init__.py  apparent_age.py  arc_face.py  deep_id.py  dlib.py  emotion.py  facenet.py  fast_mtcnn.py  gender.py  race.py  vgg_face.py  yolo.py
brushface/models/abstract/: __init__.py  analyzer.py  detector.py  model.py  recognizer.py
brushface/models/abstract/_abstract/: analyzer.py  detector.py  recognizer.py
brushface/modules/: _preprocessing.py  _type.py  analysis.py  cli.py  datastore.py  defaults.py  detection.py  recognition.py  representation.py  verification.py
